--- a/index.html
+++ b/index.html
@@ -1,25 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kyozo - Built by Creatives for Creatives</title>
-    <meta name="description" content="Kyozo is built by creatives for creatives to discover audience and manage, community and share content with them." />
-    <meta name="keywords" content="Kyozo, creatives, audience discovery, community management, content sharing" />
-    <meta property="og:title" content="Kyozo - Built by Creatives for Creatives" />
-    <meta property="og:description" content="Kyozo is built by creatives for creatives to discover audience and manage, community and share content with them." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Kyozo - Built by Creatives for Creatives" />
-    <meta name="twitter:description" content="Kyozo is built by creatives for creatives to discover audience and manage, community and share content with them." />
-    <meta name="twitter:image" content="/logo.png" />
-  </head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Kyozo - Private Waitlist</title>
+    </head>
+
+    <body>
+      <div id="root"></div>
+      <script type="module" src="/src/main.tsx"></script>
+    </body>
+  </html>
   
